<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navFuel"
            android:icon="@drawable/ic_home_logo"
            android:title="@string/home_nav_bar"/>

        <item
            android:id="@+id/navListOfRecords"
            android:icon="@drawable/ic_list_logo"
            android:title="@string/list_of_records_nav_bar" />

        <item
            android:id="@+id/navSync"
            android:icon="@drawable/ic_sync_logo"
            android:title="@string/sync_nav_bar" />

        <item
            android:id="@+id/navAssets"
            android:icon="@drawable/ic_fixed_asset_logo"
            android:title="@string/assets_nav_bar"
            />

        <item
            android:id="@+id/navAbout"
            android:icon="@drawable/ic_about_logo"
            android:title="@string/about_nav_bar" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/navLogout"
                android:icon="@drawable/ic_exit_logo"
                android:title="@string/logout_nav_bar" />
        </menu>
    </item>
</menu>