<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/main_graph"
    app:startDestination="@id/navFuel">

    <fragment
        android:id="@+id/navFuel"
        android:name="com.agroberriesmx.combustiblesagroberries.ui.fuel.FuelFragment"
        android:label="@string/graph_fuel_fragment"
        tools:layout="@layout/fragment_fuel" />
    <fragment
        android:id="@+id/navAbout"
        android:name="com.agroberriesmx.combustiblesagroberries.ui.about.AboutFragment"
        android:label="@string/graph_about_fragment"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/navSync"
        android:name="com.agroberriesmx.combustiblesagroberries.ui.sync.SyncFragment"
        android:label="@string/graph_sync_fragment"
        tools:layout="@layout/fragment_sync" />
    <fragment
        android:id="@+id/navListOfRecords"
        android:name="com.agroberriesmx.combustiblesagroberries.ui.list.ListRecordsFragment"
        android:label="@string/list_of_records_fragment"
        tools:layout="@layout/fragment_list_records" />
    <fragment
        android:id="@+id/navAssets"
        android:name="com.agroberriesmx.combustiblesagroberries.ui.assets.AssetsFragment"
        android:label="@string/assets_fragment"
        tools:layout="@layout/fragment_assets" />
</navigation>