<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.assetdetail.AssetDetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="32dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_asset_logo"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_asset"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_asset"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_asset"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_asset"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/observations_asset"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plate_asset"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_aaset"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"/>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rdCodeAsset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/empty_item_entry_record"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/rdNumberAsset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/empty_item_entry_record"
                    android:maxLines="1"
                    />

                <TextView
                    android:id="@+id/rdNameAsset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/empty_item_entry_record"
                    android:maxLines="1"
                    />

                <TextView
                    android:id="@+id/rdSerialAsset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/empty_item_entry_record"
                    android:maxLines="1"
                    />

                <TextView
                    android:id="@+id/rdObservationsAsset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/empty_item_entry_record"
                    android:maxLines="1"
                    />

                <TextView
                    android:id="@+id/rdPlateAsset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/empty_item_entry_record"
                    android:maxLines="1"
                    />

                <TextView
                    android:id="@+id/rdKmAsset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/empty_item_entry_record"
                    android:maxLines="1"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <GridView
        android:id="@+id/gvFuelRecords"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numColumns="1"
        android:verticalSpacing="8dp"
        android:padding="8dp"/>

</LinearLayout>